# smartspend-ai

./: .gitignore  README.md
backend/: .env.example  database.py  main.py  models.py  push.py  pyproject.toml  schemas.py  security.py  test_db.py
backend/routers/: ai.py  budgets.py  categories.py  coach.py  goals.py  imports.py  insights.py  push.py  settings.py  summary.py  transactions.py
backend/scripts/: generate_vapid_keys.py
frontend/: package-lock.json  package.json
frontend/public/: sw.js
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/budgets/: page.tsx
frontend/src/app/(app)/coach/: page.tsx
frontend/src/app/(app)/dashboard/: dashboard-charts.tsx  loading.tsx  logout-button.tsx  page.tsx
frontend/src/app/(app)/goals/: page.tsx
frontend/src/app/(app)/report/: page.tsx
frontend/src/app/(app)/settings/: page.tsx
frontend/src/app/(app)/subscriptions/: page.tsx
frontend/src/app/(app)/transactions/: page.tsx
frontend/src/app/(app)/transactions/categorize/: page.tsx
frontend/src/app/(app)/transactions/import/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx  page.tsx 
frontend/src/components/: auth-brand-panel.tsx  date-field.tsx  google-icon.tsx  logout-button.tsx  nav-bar.tsx
frontend/src/lib/: api.ts  push.ts
frontend/src/lib/supabase/: middleware.ts  server.ts
