[project]
name = "smartspend-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.12",
    "pyjwt[crypto]>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pywebpush>=2.3.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.0",
]
